#3676 fixed alignment of header logo

--- a/web/assets/css/main-style.css
+++ b/web/assets/css/main-style.css
@@ -263,12 +263,9 @@ textarea {
     height: 33px;
     line-height: 33px;
     margin: 0 auto;
-    max-width: 200px;
-    min-width: 125px;
     padding: 0 35px 0px 10px;
     position: relative;
     text-align: left;
-/*    width: 70%;*/
 }
 
 .vendor-login-con.vendor-out-con {
@@ -319,8 +316,9 @@ textarea {
     display: inline-block;
     font-weight: bold;
     height: 34px;
+    margin-right: 10px;
     min-width: 67px;
-    max-width: 110px;
+    max-width: 109px;
     overflow: hidden;
     text-align: left;
     text-overflow: ellipsis;
@@ -981,7 +979,7 @@ textarea {
     border-radius: 4px 0 0 4px;
     display: inline-block;
     color: #868487;
-    font-size: 0.75em;
+    font-size: 12px;
     height: 34px;
     line-height: 34px;
     margin-right: -5px;
@@ -2456,7 +2454,7 @@ header {
 }
 
 .header-cart-items-con {
-    padding: 0 5% !important;
+    padding: 0 3% !important;
     width: 78%;
 }
 
@@ -2523,7 +2521,7 @@ header {
     }
 
     .search-container {
-        width: 44%;
+        width: 45%;
     }
 
     .search-form {
@@ -2535,11 +2533,8 @@ header {
     }
 
     .mobile-vendor-cart-con {
-        width: 24%;
-    }
-
-    .mobile-vendor-cart-con {
-        margin-right: 1%;
+        margin-right: 2%;
+        width: 25%;
     }
 
     .mobile-vendor-cart {
@@ -2556,7 +2551,7 @@ header {
     }
 
     .vendor-mobile-wrapper .vendor-log-in-wrapper {
-        width: 29%;
+        width: 26%;
     }
 }
 
@@ -2580,7 +2575,11 @@ header {
     }
 
     .vendor-mobile-wrapper .vendor-log-in-wrapper {
-        width: 24%;
+        width: 23%;
+    }
+
+    .vendor-login-name span {
+        max-width: 136px;
     }
 
     .sticky-nav li:nth-child(3) input, .search-container input {
